[gd_scene load_steps=6 format=2]

[ext_resource path="res://rooms/color_room.gd" type="Script" id=1]
[ext_resource path="res://entities/GenericRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/ControllablePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://rooms/objects/ColorLight.tscn" type="PackedScene" id=4]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 45, 360, 95, 195, 385, 195, 435, 360 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 45, 360, 95, 195, 385, 195, 435, 360 ) ]

[node name="room_a_003" type="Node2D"]
script = ExtResource( 1 )
light_message = "The soft blue light emitted by the lamp makes you feel sad."

[node name="GenericRoom" parent="." instance=ExtResource( 2 )]
east_door = 3
east_target = "room_a_002"
west_door = 3
west_target = "room_a_center"

[node name="ControllablePlayer" parent="GenericRoom" instance=ExtResource( 3 )]
position = Vector2( 130.589, 274.447 )
z_index = 274

[node name="Navigation2D" type="Navigation2D" parent="GenericRoom"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="GenericRoom/Navigation2D"]
navpoly = SubResource( 1 )

[node name="Objects" type="Node2D" parent="GenericRoom"]

[node name="ColorLight" parent="GenericRoom/Objects" instance=ExtResource( 4 )]

[node name="Color" parent="GenericRoom/Objects/ColorLight/CanvasLayer" index="0"]
color = Color( 0, 0, 1, 0.109804 )

[editable path="GenericRoom/Objects/ColorLight"]
